--- a/echo/config.json.mustache
+++ b/echo/config.json.mustache
@@ -8,13 +8,13 @@
     "agentHost": "develop2.symphony.com",
     "agentPort": 443,
     "authType": "rsa",
-    "botPath": "./rsa/",
-    "botName": "firm1_innovate_hackathon_bot_50",
-    "botPassword": "<add_password_here>",
-    "botPrivateKeyPath": "./rsa/",
-    "botPrivateKeyName": "firm1_innovate_hackathon_bot_50_privatekey.pem",
-    "botUsername": "firm1_hackathon_bot_50",
-    "botEmailAddress": "firm1_hackathon_bot_50@devmeetup.com",
+    "botPath": "{{{botPath}}}",
+    "botName": "{{{botName}}}",
+    "botPassword": "{{{botPassword}}}",
+    "botPrivateKeyPath": "{{{botPrivateKeyPath}}}",
+    "botPrivateKeyName": "{{{botPrivateKeyName}}}",
+    "botUsername": "{{{botUsername}}}",
+    "botEmailAddress": "{{{botEmailAddress}}}",
     "appCertPath": "",
     "appCertName": "",
     "appCertPassword": "",
